@@ -13,6 +13,7 @@ cdef class HilbertArray:
     cpdef get_dim(self, atom)
     cpdef _assert_same_axes(self, other)
     cpdef assert_density_matrix(self, check_hermitian=*, check_normalized=*, check_positive=*)
+    cpdef is_positive(self)
     cpdef set_data(self, new_data)
     cpdef tensordot(self, HilbertArray other, contraction_spaces=*)
     cpdef tensor(self, HilbertArray other)
@@ -45,6 +46,7 @@ cdef class HilbertArray:
     cpdef singular_vals(self, row_space=*, col_space=*)
     cpdef eig(self, w_space=*, hermit=*)
     cpdef eigvals(self, hermit=*)
+    cpdef eigvalsh(self)
     cpdef sqrt(self)
     cpdef entropy(self, normalize=*, checks=*)
     cpdef purity(self, normalize=*, checks=*)
