@@ -1,5 +1,9 @@
 === qitensor-0.12dev (Dan Stahlke, ongoing) ===
+	* API change: eigenvalues in ascending order, to match numpy convention
 	* HilbertArray.fidelity
+	* HilbertArray.tensor
+	* HilbertArray.is_positive
+	* HilbertArray.eigvalsh
 	* HilbertSpace.random_povm_element
 	* experimental: non-commutative graphs
 	* fixes for the way TensorSubspace deals with dtype, etc.
